--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
     "service_worker": "src/background.js",
     "type": "module"
   },
-  "permissions": [],
-  "optional_permissions": ["activeTab", "scripting"],
+  "permissions": ["activeTab"],
+  "optional_permissions": ["scripting"],
   "optional_host_permissions": ["*://*/*"]
 }
